--- a/src/main/webapp/test2.html
+++ b/src/main/webapp/test2.html
@@ -1,11 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
 <body>
-<h2>Hello World!</h2>
+<a href="test.jsp">test</a>
+
 <a href="test.jsp">test</a>
 <a href="${pageContext.request.contextPath}/test.jsp">test</a>
 <a href="${pageContext.request.contextPath}${pageContext.request.contextPath}/test.jsp">test</a>
 <a href="baidu">baidu</a>
 <a href="admin_category_list">admin_category_list</a>
 <a href="${pageContext.request.contextPath}/admin_category_list">admin_category_list</a>
+
 </body>
 </html>
